# mvs_mvg_bat

./: .gitignore  CMakeLists.txt  Densify.ini  clearMvs.bat  collectImgPathForLandmarks.py  convertFromLabelme.py  convertToColmapTransforms.py  deleteImgs.py  gener_new_pair.py  insertMatch.py  mediapip.py  mp42jpg.py  mp42jpgAndFigureLandmarks.py  parseSVG.py  run.bat  run2.bat  run2_old.bat  run_insert.bat  run_old.bat  testMediapip.py
DenseDepthPriorsforNeRFfromSparseInputViews/: data.py  embedding.py  nerf.py  readme.md  render.py  train.py
DlibLandmark/: CMakeLists.txt  DlibLandmark.cpp  DlibLandmark.vcxproj  main.cpp
PersistentIndependentParticles/: main.py
PersistentIndependentParticles/nets/: pips.py
RAFT/: demo.py
WorldBuild/: WorldBuild.sln  WorldBuild.vcxproj  WorldBuild.vcxproj.filters  common.h  essentialDecomposeIntoRt.cpp  essentialDecomposeIntoRt.h  fivePtsFigureRt.cpp  fivePtsFigureRt.h  gms_matcher.cpp  gms_matcher.h  logging.h  main.cpp
denseCloud/: CMakeLists.txt  SelectViews.cpp  SelectViews.h  common.h  denseCloudMain.cpp  serialization.h  types.cpp  types.h  utils.h  view.proto
generatePipeMediaFeature/: CMakeLists.txt  generatePipeMediaFeature.cpp  mesh.h
main_openMVG2openMVS/: main_openMVG2openMVS.cpp
parseMVG/: CMakeLists.txt  parseMVG.cpp
replaceOpenMvgFeature/: CMakeLists.txt  insertNewMatchMain.cpp  mesh.cpp  mesh.h
segmentAnything/: test.py
